; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_exif.c_exif_decode_tag.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_exif.c_exif_decode_tag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SEEK_SET = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"0x%04X\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*, i32, i32, i32**)* @exif_decode_tag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @exif_decode_tag(i8* %0, i32* %1, i32 %2, i32 %3, i32** %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32**, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i8*, align 8
  %18 = alloca i8*, align 8
  store i8* %0, i8** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32** %4, i32*** %11, align 8
  %19 = load i32, i32* %10, align 4
  %20 = icmp sgt i32 %19, 2
  br i1 %20, label %21, label %22

21:                                               ; preds = %5
  store i32 0, i32* %6, align 4
  br label %84

22:                                               ; preds = %5
  %23 = load i32*, i32** %8, align 8
  %24 = load i32, i32* %9, align 4
  %25 = call i32 @ff_tread_tag(i32* %23, i32 %24, i32* %14, i32* %16, i32* %15, i32* %13)
  %26 = load i32*, i32** %8, align 8
  %27 = call i32 @bytestream2_tell(i32* %26)
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %34, label %29

29:                                               ; preds = %22
  %30 = load i32*, i32** %8, align 8
  %31 = load i32, i32* %13, align 4
  %32 = load i32, i32* @SEEK_SET, align 4
  %33 = call i32 @bytestream2_seek(i32* %30, i32 %31, i32 %32)
  store i32 0, i32* %6, align 4
  br label %84

34:                                               ; preds = %22
  %35 = load i32, i32* %14, align 4
  %36 = call i32 @ff_tis_ifd(i32 %35)
  store i32 %36, i32* %12, align 4
  %37 = load i32, i32* %12, align 4
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %39, label %47

39:                                               ; preds = %34
  %40 = load i8*, i8** %7, align 8
  %41 = load i32*, i32** %8, align 8
  %42 = load i32, i32* %9, align 4
  %43 = load i32, i32* %10, align 4
  %44 = add nsw i32 %43, 1
  %45 = load i32**, i32*** %11, align 8
  %46 = call i32 @ff_exif_decode_ifd(i8* %40, i32* %41, i32 %42, i32 %44, i32** %45)
  store i32 %46, i32* %12, align 4
  br label %78

47:                                               ; preds = %34
  %48 = load i32, i32* %14, align 4
  %49 = call i8* @exif_get_tag_name(i32 %48)
  store i8* %49, i8** %17, align 8
  %50 = load i8*, i8** %17, align 8
  store i8* %50, i8** %18, align 8
  %51 = load i8*, i8** %18, align 8
  %52 = icmp ne i8* %51, null
  br i1 %52, label %64, label %53

53:                                               ; preds = %47
  %54 = call i8* @av_malloc(i32 7)
  store i8* %54, i8** %18, align 8
  %55 = load i8*, i8** %18, align 8
  %56 = icmp ne i8* %55, null
  br i1 %56, label %60, label %57

57:                                               ; preds = %53
  %58 = load i32, i32* @ENOMEM, align 4
  %59 = call i32 @AVERROR(i32 %58)
  store i32 %59, i32* %6, align 4
  br label %84

60:                                               ; preds = %53
  %61 = load i8*, i8** %18, align 8
  %62 = load i32, i32* %14, align 4
  %63 = call i32 @snprintf(i8* %61, i32 7, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 %62)
  br label %64

64:                                               ; preds = %60, %47
  %65 = load i8*, i8** %7, align 8
  %66 = load i32, i32* %15, align 4
  %67 = load i32, i32* %16, align 4
  %68 = load i8*, i8** %18, align 8
  %69 = load i32*, i32** %8, align 8
  %70 = load i32, i32* %9, align 4
  %71 = load i32**, i32*** %11, align 8
  %72 = call i32 @exif_add_metadata(i8* %65, i32 %66, i32 %67, i8* %68, i32* null, i32* %69, i32 %70, i32** %71)
  store i32 %72, i32* %12, align 4
  %73 = load i8*, i8** %17, align 8
  %74 = icmp ne i8* %73, null
  br i1 %74, label %77, label %75

75:                                               ; preds = %64
  %76 = call i32 @av_freep(i8** %18)
  br label %77

77:                                               ; preds = %75, %64
  br label %78

78:                                               ; preds = %77, %39
  %79 = load i32*, i32** %8, align 8
  %80 = load i32, i32* %13, align 4
  %81 = load i32, i32* @SEEK_SET, align 4
  %82 = call i32 @bytestream2_seek(i32* %79, i32 %80, i32 %81)
  %83 = load i32, i32* %12, align 4
  store i32 %83, i32* %6, align 4
  br label %84

84:                                               ; preds = %78, %57, %29, %21
  %85 = load i32, i32* %6, align 4
  ret i32 %85
}

declare dso_local i32 @ff_tread_tag(i32*, i32, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @bytestream2_tell(i32*) #1

declare dso_local i32 @bytestream2_seek(i32*, i32, i32) #1

declare dso_local i32 @ff_tis_ifd(i32) #1

declare dso_local i32 @ff_exif_decode_ifd(i8*, i32*, i32, i32, i32**) #1

declare dso_local i8* @exif_get_tag_name(i32) #1

declare dso_local i8* @av_malloc(i32) #1

declare dso_local i32 @AVERROR(i32) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1

declare dso_local i32 @exif_add_metadata(i8*, i32, i32, i8*, i32*, i32*, i32, i32**) #1

declare dso_local i32 @av_freep(i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
